# ChangeLog for app-i18n/kanjipad
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/kanjipad/ChangeLog,v 1.12 2007/02/21 22:05:08 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  14 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> kanjipad-2.0.0.ebuild:
  Add missing pkgconfig dependencies, thanks to Patrick Lauer in bug #151272.

  26 Oct 2004; Tom Gall <tgall@gentoo.org> kanjipad-2.0.0.ebuild:
  stable on ppc64, bug #66877

  01 May 2004; Mamoru KOMACHI <usata@gentoo.org> kanjipad-2.0.0.ebuild:
  Fixed build problem with gtk+-2.4. Closing bug #49535

  26 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> kanjipad-1.2.3.ebuild,
  kanjipad-2.0.0.ebuild:
  Marked stable on x86. Added missing IUSE and removed default S

*kanjipad-2.0.0 (29 Jul 2003)

  29 Jul 2003; YAMAKURA Makoto <yakina@gentoo.org> kanjipad-2.0.0.ebuild:
  Version bump; Closes bug #25371.

  22 Jul 2003; Martin Holzer <mholzer@gentoo.org> kanjipad-1.2.3.ebuild:
  Fixed DEPEND. Closes #24969.

*kanjipad-1.2.3 (10 Jul 2002)

  10 Jul 2002; Stuart Bouyer <stubear@gentoo.org> kanjipad-1.2.3.ebuild:

  Initial import of kanjipad ebuild.
