@@ -1,6 +1,8 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/kanjipad/kanjipad-2.0.0.ebuild,v 1.9 2006/10/14 09:20:14 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/kanjipad/kanjipad-2.0.0.ebuild,v 1.10 2011/03/27 10:53:08 nirbheek Exp $
+
+EAPI="2"
 
 DESCRIPTION="Japanese handwriting recognition tool"
 HOMEPAGE="http://fishsoup.net/software/kanjipad/"
@@ -11,8 +13,8 @@ SLOT="0"
 KEYWORDS="x86 amd64 ppc64"
 IUSE=""
 
-RDEPEND=">=x11-libs/gtk+-2
-	>=dev-libs/glib-2"
+RDEPEND="x11-libs/gtk+:2
+	dev-libs/glib:2"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
