@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/kanjipad
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/kanjipad/ChangeLog,v 1.12 2007/02/21 22:05:08 peper Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/kanjipad/ChangeLog,v 1.13 2011/03/27 10:53:08 nirbheek Exp $
+
+  27 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org> kanjipad-1.2.3.ebuild,
+  kanjipad-2.0.0.ebuild:
+  Fix slot-deps on gnome libs
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
